2001-07-10  John Healy  <jhealy@redhat.com>

	* config/obj-elf.c (obj_elf_section): md_elf_section_change_data_hook
	added to grab section information after it's been extracted from the
	.section directive.

2001-07-10  Anders Norlander <anorland@synergenix.se>

	* doc/as.texinfo (Incbin): Fix grammatical errors.

2001-07-10  Nick Clifton  <nickc@cambridge.redhat.com>

	* depend.c: Use FOPEN_.. macros in calls to fopen().
	* input-file.c: As above.
	* itbl-ops.c: As above.
	* listing.c: As above.
	* output-file.c: As above.
	* read.c: As above.

2001-07-08  Anders Norlander <anorland@synergenix.se>

	* read.c (s_incbin): New .incbin function.
	* read.c (potable): Add "incbin" pseudo-op.
	* read.h: Add s_incbin prototype.
	* doc/as.texinfo (incbin): Document .incbin pseudo-op.
	* NEWS: Mention new feature.

2001-07-07  Nick Clifton  <nickc@cambridge.redhat.com>

	* ecoff.c (add_file): Only set debug_type to DEBUG_NONE if it is
	DEBUG_UNSPECIFIED.

2001-07-06  John Healy  <jhealy@redhat.com>

	* cgen.c (gas_cgen_save_fixups): Modified to allow more than one
	set of fixups to be stored.
	(gas_cgen_restore_fixups): Modified to allow the fixup chain to be
	restored to be chosen from any that are saved.
	(gas_cgen_swap_fixups): Modified to allow the current set of
	fixups to be swapped with any other set that has been saved.
	(gas_cgen_initialize_saved_fixups_array): New routine.
	* cgen.h: Modifed prototypes for gas_cgen_save_fixups,
	gas_cgen_restore_fixups, and gas_cgen_swap_fixups.  Added definitions
	or MAX_SAVED_FIXUP_CHAINS.
	* config/tc-m32r.c (assemble_two_insns): Changed calls to fixup
	store, swap and restore fuctions to reflect the new interface.

2001-07-06  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-m68k.c (md_estimate_size_before_relax): Catch and
	ignore empty, ineffectual alignment frags when deciding if a
	branch can be short.

2001-07-05  Steve Ellcey  <sje@cup.hp.com>

	* config/tc-ia64.c (special_section): Add SPECIAL_SECTION_INIT_ARRAY