@@ -1,3 +1,8 @@
+2001-07-10  Mark Elbrecht  <snowball3@softhome.net>
+
+	* config/obj-coff.c (coff_frob_symbol): Don't merge if the storage
+	class of the non-debug symbol is C_NULL.
+
 2001-07-10  John Healy  <jhealy@redhat.com>
 
 	* config/obj-elf.c (obj_elf_section): md_elf_section_change_data_hook
